# gcli

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  README.md
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  release.sh
src/: agents.rs  main.rs
