[package]
name = "gcli"
version = "3.0.1"
edition = "2021"
authors = ["You"]
description = "gcli v3 — Grok CLI: Voice STT + Embedded PPTX + Multi-Agent + Auto-Git"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
git2 = "0.19"
tts = "0.26.3"
ppt-rs = "0.2"
self_update = { version = "0.42", features = ["archive-zip", "compression-flate2"] }
walkdir = "2"
regex = "1.10"
chrono = "0.4"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"
base64 = "0.22"
transcribe-rs = { version = "0.2", features = ["whisper"] }
cpal = "0.15"
hound = "3.5"
rand = "0.8"
